# MoDash

./: .gitignore  README.md  modash.py  pyproject.toml
assets/: shutdown.js
